# bedmin

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  setup.py  setup.sh  tui.py
src/: backup_manager.py  downloader.py  ipc.py  log_manager.py  logging_setup.py  player_manager.py  process_manager.py  registry.py  scheduler.py  server_instance.py
