[project]
name = "minectl"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# tui.py sets env vars / disables logging between imports intentionally
"tui.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = "venv"
