[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bedmin"
version = "0.1.0"
description = "Minecraft Bedrock Dedicated Server manager"
requires-python = ">=3.11"
dependencies = [
    "click==8.1.7",
    "requests==2.31.0",
    "tqdm==4.66.1",
    "textual>=0.61.0",
    "schedule>=1.2.0",
]

[project.scripts]
bedmin = "main:cli"
bedmin-tui = "tui:main"

[tool.hatch.build.targets.wheel]
include = ["main.py", "config.py", "tui.py", "src/"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# tui.py sets env vars / disables logging between imports intentionally
"tui.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = "venv"
